<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="download_status">Download status</string>
    <string name="download_successful">Download successful</string>
    <string name="download_failed">Download failed</string>
    <string name="select_file">Please select the file to download</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="paused">Paused</string>
    <string name="pending">Pending</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="file">File:</string>
    <string name="status">Status:</string>
    <string name="done">Done</string>
    <string name="open_file">Open File</string>


    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download">Download</string>

    <string name="glide_file">Glide - Image Loading Library by BumpTech </string>
    <string name="load_app_file">LoadApp Current Repository by Udacity</string>
    <string name="retrofit_file">Retrofit - Type-safe Http client for Android and Java by Square, inc</string>
    <string name="custom_file">Custom URL</string>
    <string name="custom_file_hint">Please enter the custom URL</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>





</resources>
